--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
   "bugs": {
     "url": "https://github.com/binocarlos/flocker-cache/issues"
   },
-  "homepage": "https://github.com/binocarlos/flocker-cache"
+  "homepage": "https://github.com/binocarlos/flocker-cache",
+  "devDependencies": {
+    "tape": "^2.14.0"
+  }
 }
